@@ -1,8 +1,9 @@
 cowdancer (0.45) UNRELEASED; urgency=low
 
-  * 
+  * cowbuilder, qemubuilder: Give error message when '--build' is invoked
+    without .dsc file parameter.  (Closes: #460041).
 
- -- Junichi Uekawa <dancer@debian.org>  Mon, 03 Dec 2007 08:37:53 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Thu, 10 Jan 2008 20:11:43 +0900
 
 cowdancer (0.44) unstable; urgency=low
 
