@@ -1,3 +1,7 @@
+2008-01-10  Junichi Uekawa  <dancer@debian.org>
+
+	* parameter.c (parse_parameter): add error checking.
+
 2007-12-04  Junichi Uekawa  <dancer@debian.org>
 
 	* tests/900_test_pbuilder.sh: use debootstrap instead of
